--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
@@ -46,13 +46,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">Remise Systeem</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Beurt">Beurt</a></li>
+                        <li><a runat="server" href="~/administrator">Administrator</a></li>
+                        <li><a runat="server" href="~/Bestuurder">Bestuurder</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
