--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %>- My ASP.NET Application</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -47,6 +47,9 @@
                         <span class="icon-bar"></span>
                     </button>
                     <a class="navbar-brand" runat="server" href="~/">Remise Systeem</a>
+                    <a class="navbar-brand" runat="server" href="~/">
+                    <asp:Label ID="lblLoggedIn" runat="server"></asp:Label>
+                    </a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
@@ -54,11 +57,11 @@
                         <li><a runat="server" href="~/BeurtPage">Beurt</a></li>
                         <li><a runat="server" href="~/administrator">Administrator</a></li>
                         <li><a runat="server" href="~/Bestuurder">Bestuurder</a></li>
+                        <li><a runat="server" href="~/Reserveren">Reserveren</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a runat="server" href="~/Account/Register">Register</a></li>
                                 <li><a runat="server" href="~/Account/Login">Log in</a></li>
                             </ul>
                         </AnonymousTemplate>
