--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/Content/bootstrap.css
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/Content/bootstrap.css
@@ -162,7 +162,7 @@ button,
 input,
 select,
 textarea {
-  margin: 0;
+  margin: 0 0 0 0px;
   font-family: inherit;
   font-size: 100%;
 }
@@ -3944,7 +3944,7 @@ textarea.input-group-sm > .input-group-btn > .btn {
 }
 
 .nav-justified {
-  width: 100%;
+  width: 97%;
 }
 
 .nav-justified > li {
