--- a/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
+++ b/Software V1/RemiseSite Groep B/RemiseSite Groep B/Site.Master
@@ -59,6 +59,7 @@
                         <li><a runat="server" href="~/administrator">Administrator</a></li>
                         <li><a runat="server" href="~/Bestuurder">Bestuurder</a></li>
                         <li><a runat="server" href="~/Reserveren">Reserveren</a></li>
+                        <li><a runat="server" href="~/uitrijlijst">Uitrijlijst</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
